Add more permgen for gs tests. M2e seems to need it.