@@ -24,7 +24,7 @@
 					<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
 					<testSuite>org.springframework.ide.eclipse.gettingstarted.tests</testSuite>
 					<testClass>org.springframework.ide.eclipse.gettingstarted.tests.AllGettingStartedTests</testClass>
-					<argLine>-Dgithub.user.name=${github.user.name} -Dgithub.user.password=${github.user.password} -Xmx1024m</argLine>
+					<argLine>-Dgithub.user.name=${github.user.name} -Dgithub.user.password=${github.user.password} -Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 			
